Fix grade fetchAll Response object
